# domino-compiler

./: .gitignore  .travis.yml  .ycm_extra_conf.py  Grouper.cc  INSTRUCTION.md  Makefile.am  README  README.md  algebraic_simplifier.cc  algebraic_simplifier.h  array_validator.cc  array_validator.h  assert_exception.h  ast_visitor.cc  ast_visitor.h  banzai_atom.cc  banzai_atom.h  banzai_code_gen_test.cc  banzai_code_generator.cc  banzai_code_generator.h  bool_to_int.cc  bool_to_int.h  build_progs.sh  canonicalize_if.cc  canonicalize_if.sh  canonicalizer.cc  chipmunk_anotherDomino_generator.cc  chipmunk_anotherDomino_generator.h  chipmunk_another_domino_generator.cc  chipmunk_another_domino_generator.h  chipmunk_code_generator.cc  chipmunk_code_generator.h  chipmunk_deadcode_generator.cc  chipmunk_deadcode_generator.h  chipmunk_remove_null_stmt.cc  chipmunk_remove_null_stmt.h  clang_compile.sh  clang_utility_functions.cc  clang_utility_functions.h  compile.sh  (+133 more)
atom_templates/: inc_dec.sk  paired_update.sk  pred_read_add_write.sk  read_add_write.sk  read_write.sk  two_way_pred_read_add_write.sk
examples/: SLBN_domino.c  bloom_filter.c  bloom_filter.py  codel.c  codel.py  conga.c  conga.py  deterministic_sampling.c  deterministic_sampling.py  ewma.c  flowlet.p4  flowlet_switching.c  flowlet_switching_simple.c  flowlet_with_hash_func.c  hashes.h  heavy_hitters.c  learn_filter.py  learning_bloom_filter.c  learning_bloom_filter_alternate.c  learning_bloom_filter_alternate2.c  meter.c  meter.py  muxes.sk  rcp.c  rel_ops.sk
tests/: Makefile.am  array_example.c  array_with_index_vars.c  complicated_scc_test.cc  deterministic_sampling.c  echo_test.cc  expr_flattener_test.cc  flowlet_switching.c  flowlet_with_hash_func.c  for_loop.c  graph.dot  graph_dot_constructor.cc  hello.c  if_converter_test.cc  if_else.c  if_else_if.c  if_with_2_stmts.c  if_with_var_decls.c  if_without_brace.c  impl_casts_int.c  local_var.c  nested_ifs.c  packet-if-else.c  packet.c  packet_if_else.c  partitioning_example.c  return.c  scc_test.cc  single_if.c  stateful.c  stateful_canonical.c  stateful_partitioning.c  stateful_partitioning_rewritten.c  strength_reducer_test.cc  switch.c  while_loop.c
